<resources>
    <string name="app_name">Township</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register">Register</string>
    <string name="error_invalid_email">This uer name is invalid</string>
    <string name="error_invalid_email_1">This email id is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_incorrect_uername_password">Incorrect uer name or password</string>
    <string name="error_field_required">This field is required</string>
    <string name="full_name">Full Name</string>
    <string name="user_name">User Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="block">Block</string>
    <string name="flat_number">Flat Number</string>
    <string name="prompt_password_1">Password</string>
    <string name="prompt_uername">User Name</string>
</resources>
